[PURDUENEXT][#455][PLG_COURSES_NOTES] Fixed slight alignment issue with search button in Firefox and IE 9

--- a/plugins/courses/notes/notes.css
+++ b/plugins/courses/notes/notes.css
@@ -67,10 +67,10 @@
 		float: left;
 		border-right: none;
 		-webkit-border-radius: 0.25em 0 0 0.25em;
-		-moz-border-radius: 0.25em 0 0 0.25em;
-		-ms-border-radius: 0.25em 0 0 0.25em;
-		-o-border-radius: 0.25em 0 0 0.25em;
-		border-radius: 0.25em 0 0 0.25em;
+		   -moz-border-radius: 0.25em 0 0 0.25em;
+		    -ms-border-radius: 0.25em 0 0 0.25em;
+		     -o-border-radius: 0.25em 0 0 0.25em;
+		        border-radius: 0.25em 0 0 0.25em;
 	}
 	@-moz-document url-prefix() {
 		.course_notes fieldset.filters input {
@@ -81,20 +81,20 @@
 		background: #f1f1f1;
 		padding: 0.35em 0.41em\9;
 		-webkit-border-radius: 0 0.25em 0.25em 0;
-		-moz-border-radius: 0 0.25em 0.25em 0;
-		-ms-border-radius: 0 0.25em 0.25em 0;
-		-o-border-radius: 0 0.25em 0.25em 0;
-		border-radius: 0 0.25em 0.25em 0;
+		   -moz-border-radius: 0 0.25em 0.25em 0;
+		    -ms-border-radius: 0 0.25em 0.25em 0;
+		     -o-border-radius: 0 0.25em 0.25em 0;
+		        border-radius: 0 0.25em 0.25em 0;
 		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-o-box-sizing: border-box;
-		box-sizing: border-box;
+		   -moz-box-sizing: border-box;
+		    -ms-box-sizing: border-box;
+		     -o-box-sizing: border-box;
+		        box-sizing: border-box;
 		-webkit-background-clip: padding-box;
-		-moz-background-clip: padding-box;
-		-ms-background-clip: padding-box;
-		-o-background-clip: padding-box;
-		background-clip: padding-box;
+		   -moz-background-clip: padding-box;
+		    -ms-background-clip: padding-box;
+		     -o-background-clip: padding-box;
+		        background-clip: padding-box;
 		font-size: 1em;
 		line-height: 1.61803399em;
 		outline: none;
@@ -113,8 +113,12 @@
 	}
 	@-moz-document url-prefix() {
 		.course_notes fieldset.filters input.filter-submit {
-			padding: 0.25em 0.41em;
+			padding: 0.41em 0.41em 0.4em 0.41em;
 		}
+	}
+	html.ie10 .course_notes fieldset.filters input.filter-submit,
+	html.ie9 .course_notes fieldset.filters input.filter-submit {
+		padding: 0.3em 0.41em;
 	}
 	.course_notes fieldset.filters p label span {
 		display: none;
